--- a/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.scss
+++ b/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.scss
@@ -1,106 +1,62 @@
 .example-spacer {
-    flex: 1 1 auto;
-  }
-  
-  .mat-toolbar {
-    background: #000000;
-    color: #1ddd04;
-  }
-  
-  .logo-central {
-    width: 50px;
-    height: 50px;
-    background-image: url(/src/assets/images/heimdall.logo.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  
-  .tituloH {
-    font-size: 2em;
-    font-family: Copperplate, Copperplate Gothic Light, fantasy;
-    cursor: pointer;
-  }
-  
-  .table-container {
-    width: 95%;
-    margin: auto;
-    margin-top: 1cm;
-    border: 2px solid rgb(0, 0, 0);
-    overflow-x: auto; /* Permitir rolagem horizontal */
-  }
-  
-  mat-table{
-    background-color: #83cf79;
-    width: 100%;
-  }
-  
-  .mat-mdc-form-field {
-    font-size: 14px;
-    width: 100%;
-    margin-bottom: -20px;
-  }
-  
-  .demo-button-container{
-    position: absolute;
-    margin: 1% auto;
-    margin-left: 3%;
-  }
-  
-  .demo-button + .demo-button {
-    margin-left: 8px;
-  }
-  
-  @media (max-width: 768px) {
-    .tituloH {
-      font-size: 1.5em; /* Reduzir tamanho da fonte do título */
-    }
-    .mat-header-cell, .mat-cell {
-      padding: 8px; /* Reduzir padding em telas pequenas */
-    }
-  
-    .mat-form-field {
-      width: 100%; /* Form field ocupa toda a largura */
-    }
-  
-    .demo-button-container {
-      position: relative;
-      width: 90%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin: auto;
-      margin-top: 2%;
-    }
-  
-    .demo-button {
-      margin-bottom: 8px;
-      width: 90%;
-      text-align: center;
-    }
-  }
-  
-  @media (max-width: 480px) {
-    .tituloH {
-      font-size: 1.5em; /* Reduzir tamanho da fonte do título */
-    }
-  
-    .mat-header-cell, .mat-cell {
-      font-size: 12px; /* Reduzir tamanho da fonte na tabela */
-    }
+  flex: 1 1 auto;
+}
 
-    .mat-mdc-header-cell, .mat-mdc-cell {
-      font-size: 12px; /* Reduzir tamanho da fonte na tabela */
-    }
-  
-    /* Esconder colunas menos importantes em telas pequenas */
-    .mat-column-cadeiras, .mat-column-mesas, .mat-column-cadeirasPorMesa,
-    .mat-column-computadores, .mat-column-capacidade, .mat-column-projetor {
-      display: none;
-    }
-  }
-  .spacer {
-      flex: 1 1 auto;
-    }
-    
+.mat-toolbar {
+  background: #000000;
+  color: #1ddd04;
+}
+
+.logo-central {
+  width: 50px;
+  height: 50px;
+  background-image: url(/src/assets/images/heimdall.logo.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.tituloH {
+  font-size: 2em;
+  font-family: Copperplate, Copperplate Gothic Light, fantasy;
+  cursor: pointer;
+}
+
+.table-container {
+  width: 95%;
+  margin: auto;
+  margin-top: 1cm;
+  border: 2px solid rgb(0, 0, 0);
+  overflow-x: auto;
+}
+
+mat-table {
+  background-color: #83cf79;
+  width: 100%;
+}
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  width: 100%;
+  margin-bottom: -20px;
+}
+
+.demo-button-container {
+  position: absolute;
+  margin: 1% auto;
+  margin-left: 3%;
+}
+
+.demo-button + .demo-button {
+  margin-left: 8px;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.logo {
+  position: relative;
+  width: 30px;
+  margin-right: 10px;
+}
