--- a/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.html
+++ b/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.html
@@ -1,10 +1,8 @@
 <mat-toolbar>
-  <!-- Botão para voltar para a página anterior -->
   <button mat-icon-button (click)="goBack()">
     <mat-icon>home</mat-icon>
   </button>
 
-  <!-- Botão do menu existente -->
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
@@ -15,97 +13,126 @@
     </button>
   </mat-menu>
 
-  <!-- Título -->
   <span class="tituloH">HEIMDALL</span>
 
-  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
   <span class="spacer"></span>
 
-  <!-- Botão de logout -->
   <button mat-icon-button (click)="logout()">
     <mat-icon>logout</mat-icon>
   </button>
+  <img src="assets/images/ifsp.logo.png" class="logo" />
 </mat-toolbar>
 
-  <div class="table-container">
+<div class="table-container">
+  <mat-form-field>
+    <mat-label>Informe o Curso:</mat-label>
+    <mat-select
+      (valueChange)="changeCourse($event)"
+      formControlName="teachers_id"
+      multiple
+    >
+      @for (course of courseList; track course) {
+      <mat-option [value]="course._id">{{ course.name }}</mat-option>
+      } @empty {
+      <mat-option [value]="">Sem dados</mat-option>
+      }
+    </mat-select>
+  </mat-form-field>
+  <div
+    *ngIf="selectionCourse.selected.length > 0 && dataSource.data.length > 0"
+  >
     <mat-form-field>
-      <mat-label>Informe o Curso:</mat-label>
-      <mat-select (valueChange)="changeCourse($event)" formControlName="teachers_id" multiple>
-        @for (course of courseList; track course) {
-          <mat-option [value]="course._id">{{course.name}}</mat-option>
-        } @empty {
-          <mat-option [value]="">Sem dados</mat-option>
-        }
-      </mat-select>
+      <mat-label>Filtro por palavras chaves</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Ex: SOPA2"
+        #input
+      />
     </mat-form-field>
-    <div *ngIf="selectionCourse.selected.length > 0 && dataSource.data.length > 0">
-      
-      <mat-form-field>
-        <mat-label>Filtro por palavras chaves</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex: SOPA2" #input>
-      </mat-form-field>
 
-      <div class="mat-elevation-z4">
-        <table mat-table [dataSource]="dataSource" matSort>
-          
-          <!-- Checkbox Column -->
-          <ng-container matColumnDef="remove">
-            <th mat-header-cell *matHeaderCellDef>
-                  <mat-checkbox (change)="$event ? toggleAllRowsReject() : null"
-                  [checked]="selectionReject.hasValue() && isAllRejectSelected()"
-                  [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
-                  >
-                  Selecionar Excluir
-                </mat-checkbox>
-              </th>
-              <td mat-cell *matCellDef="let row">
-                <mat-checkbox (click)="$event.stopPropagation()"
-                (change)="$event ? selectionReject.toggle(row) : null"
-                [checked]="selectionReject.isSelected(row)"
-                ></mat-checkbox>
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="edit">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Selecionar Editar</th>
-              <td class="select" mat-cell *matCellDef="let row">
-                <mat-checkbox (click)="$event.stopPropagation()"
-                  (change)="$event ? selection.toggle(row) : null"
-                  [checked]="selection.isSelected(row)"
-                  [disabled]="selection.selected.length > 0 ? !selection.isSelected(row) : false"
-                  ></mat-checkbox>
-              </td>
-            </ng-container>
-      
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
-            <td mat-cell *matCellDef="let row"> {{ row.name }} </td>
-          </ng-container>
-          <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
-            <td mat-cell *matCellDef="let row"> {{ row.description }} </td>
-          </ng-container>
+    <div class="mat-elevation-z4">
+      <table mat-table [dataSource]="dataSource" matSort>
+        <ng-container matColumnDef="remove">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox
+              (change)="$event ? toggleAllRowsReject() : null"
+              [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+              [indeterminate]="
+                selectionReject.hasValue() && !isAllRejectSelected()
+              "
+            >
+              Selecionar Excluir
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox
+              (click)="$event.stopPropagation()"
+              (change)="$event ? selectionReject.toggle(row) : null"
+              [checked]="selectionReject.isSelected(row)"
+            ></mat-checkbox>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="edit">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Selecionar Editar
+          </th>
+          <td class="select" mat-cell *matCellDef="let row">
+            <mat-checkbox
+              (click)="$event.stopPropagation()"
+              (change)="$event ? selection.toggle(row) : null"
+              [checked]="selection.isSelected(row)"
+              [disabled]="
+                selection.selected.length > 0
+                  ? !selection.isSelected(row)
+                  : false
+              "
+            ></mat-checkbox>
+          </td>
+        </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      
-          <!-- Row shown when there is no matching data. -->
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">Não foram encontrados dados para: "{{input.value}}"</td>
-          </tr>
-        </table>
-      
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-      </div> 
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+        </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
+          <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            Não foram encontrados dados para: "{{ input.value }}"
+          </td>
+        </tr>
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        aria-label="Select page of users"
+      ></mat-paginator>
     </div>
   </div>
+</div>
 
-  
-
-   <div class="demo-button-container">
-      <button mat-raised-button [disabled]="selection.selected.length == 0" (click)="editMateria()" class="demo-button">
-        EDITAR MATÉRIA
-      </button>
-      <button mat-raised-button [disabled]="selectionReject.selected.length < 1" (click)="apagarMaterias()" class="demo-button">
-        EXCLUIR MATÉRIA
-      </button>
-  </div>
+<div class="demo-button-container">
+  <button
+    mat-raised-button
+    [disabled]="selection.selected.length == 0"
+    (click)="editMateria()"
+    class="demo-button"
+  >
+    EDITAR MATÉRIA
+  </button>
+  <button
+    mat-raised-button
+    [disabled]="selectionReject.selected.length < 1"
+    (click)="apagarMaterias()"
+    class="demo-button"
+  >
+    EXCLUIR MATÉRIA
+  </button>
+</div>
