--- a/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.html
+++ b/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.html
@@ -1,10 +1,8 @@
 <mat-toolbar>
-  <!-- Botão para voltar para a página anterior -->
   <button mat-icon-button (click)="goHome()">
     <mat-icon>home</mat-icon>
   </button>
 
-  <!-- Botão do menu existente -->
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
@@ -15,16 +13,14 @@
     </button>
   </mat-menu>
 
-  <!-- Título -->
   <span class="tituloH">HEIMDALL</span>
 
-  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
   <span class="spacer"></span>
 
-  <!-- Botão de logout -->
   <button mat-icon-button (click)="logout()">
     <mat-icon>logout</mat-icon>
   </button>
+  <img src="assets/images/ifsp.logo.png" class="logo" />
 </mat-toolbar>
 
 <mat-card>
@@ -74,7 +70,7 @@
           }
         </mat-select>
       </mat-form-field>
-
+      <br />
       <button type="submit" class="saveButton">
         {{ classToEdit.valid ? "Editar" : "Cadastrar" }}
       </button>
