--- a/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.scss
+++ b/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.scss
@@ -1,135 +1,61 @@
-.example-spacer {
-    flex: 1 1 auto;
-  }
-  
-  .manuSpacer {
-    margin: 0 2%;
-    width: 13%;
-    display: flex;
-    a {
-      margin: 0 3%;
-    }
-  }
-  
-  .mat-toolbar {
-    background: rgb(20, 20, 20);
-    color: #1ddd04;
-    margin-bottom: 1cm;
-  }
-  
-  .box-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 10%;
-    .logo-central {
-      z-index: 999;
-      width: 225px;
-      height: 225px;
-      margin-right: 5%;
-      background-image: url(/src/assets/images/heimdall.logo.png);
-    }
-    .tryNow {
-      display: flex;
-      flex-direction: column;
-      background-color: rgba(255, 255, 255, 0.3);
-      padding: 5%;
-      border-radius: 10px;
-      z-index: 999;
-      justify-content: center;
-      width: 20%;
-      p {
-        font-size: 1.2em;
-        width: 80%;
-        margin: 0 0 8% 15%;
-        font-weight: 700;
-      }
-      ::ng-deep {
-        button {
-          .mdc-button__label {
-            font-weight: 900 !important;
-            font-family: sans-serif !important;
-            font-size: 1.2em !important;
-          }
-        }
-      }
-    }
-  }
-  
-  .tituloH {
-    font-size: 2em;
-    font-family: Copperplate, Copperplate Gothic Light, fantasy;
-    cursor: pointer;
-  }
-  
-  mat-card{
-    background-color: rgb(20, 20, 20);
-    border: 3px solid #1ddd04;
-    width: 50%;
-    margin: auto;
-    padding: 1cm;
-  }
+.mat-toolbar {
+  background: rgb(20, 20, 20);
+  color: #1ddd04;
+  margin-bottom: 1cm;
+}
 
-  mat-form-field{
-    margin-left: 2cm;
-  }
-  
-  mat-card-title{
-    margin-bottom: 1cm;
-    text-align: center;
-    color: #1ddd04;
-  }
+.tituloH {
+  font-size: 2em;
+  font-family: Copperplate, Copperplate Gothic Light, fantasy;
+  cursor: pointer;
+}
 
-  .saveButton{
-    border-radius: 5px;
-    font-family:monospace;
-    font-size: 16px;
-    padding-left: 2.5cm;
-    padding-right: 2.5cm;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    margin-right: 1cm;
-    background-color: #1ddd04;
-    color: black;
-    cursor: pointer;
-    float: right;
-    margin-right: 1cm;
-    margin-bottom: 20px;
-  }
+mat-card {
+  background-color: #dcdee2;
+  border-radius: 20px;
+  box-shadow: 0 2px 5px black;
+  width: 50%;
+  padding: 1cm;
+  margin: auto;
+  text-align: center;
+}
 
-  @media (max-width: 768px) {
+mat-form-field {
+  margin-inline: 1cm;
+  width: 35%;
+}
 
-    /* Estilos para telas menores que 768px */
-  
-    .mat-toolbar {
-      flex-wrap: wrap; /* Quebrar conteúdo da barra de ferramentas em mobile */
-    }
-  
-    .mat-toolbar .mat-icon-button {
-      margin-right: 10px; /* Adicionar espaçamento entre botão de menu e título em mobile */
-    }
-  
-    .tituloH {
-      font-size: 1.5em; /* Aumentar tamanho da fonte do título para melhor legibilidade em mobile */
-    }
-  
-    mat-card {
-      width: 100%; /* Tornar o card com largura total em mobile */
-      border: 10% solid #1ddd04;
-      padding: 20px; /* Ajustar preenchimento para melhor layout em mobile */
-    }
-  
-    mat-form-field {
-      margin-left: 0; /* Remover margem esquerda nos campos de formulário para melhor espaçamento */
-      margin-bottom: 10px; /* Adicionar espaço entre campos de formulário */
-    }
-  
-    .saveButton {
-      width: 100%; /* Tornar o botão com largura total em mobile */
-      margin: 10px 0; /* Adicionar espaço ao redor do botão */
-    }
-  }
-  .spacer {
-      flex: 1 1 auto;
-    }
-    
+mat-card-title {
+  margin-bottom: 40px;
+  text-align: center;
+  color: black;
+  font-size: 40px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.saveButton {
+  margin-top: 30px;
+  border-radius: 20px;
+  font-size: 25px;
+  padding: 15px;
+  background-color: black;
+  color: #1ddd04;
+  cursor: pointer;
+  margin-bottom: 20px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  width: 530px;
+}
+.saveButton:hover {
+  background-color: #1ddd04;
+  color: black;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.logo {
+  position: relative;
+  width: 30px;
+  margin-right: 10px;
+}
