--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
@@ -1,10 +1,8 @@
 <mat-toolbar>
-  <!-- Botão para voltar para a página anterior -->
   <button mat-icon-button (click)="goBack()">
     <mat-icon>home</mat-icon>
   </button>
 
-  <!-- Botão do menu existente -->
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
@@ -15,90 +13,120 @@
     </button>
   </mat-menu>
 
-  <!-- Título -->
   <span class="tituloH">HEIMDALL</span>
 
-  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
   <span class="spacer"></span>
 
-  <!-- Botão de logout -->
   <button mat-icon-button (click)="logout()">
     <mat-icon>logout</mat-icon>
   </button>
+  <img src="assets/images/ifsp.logo.png" class="logo" />
 </mat-toolbar>
 
 <div>
   <form [formGroup]="resgiterForm" (ngSubmit)="search()">
     <mat-form-field>
       <mat-label>Informe o Curso:</mat-label>
-      <mat-select (valueChange)="changeCourse($event)" formControlName="course_id">
+      <mat-select
+        (valueChange)="changeCourse($event)"
+        formControlName="course_id"
+      >
         @for (course of courseList; track course) {
-          <mat-option [value]="course._id">{{course.name}}</mat-option>
+        <mat-option [value]="course._id">{{ course.name }}</mat-option>
         } @empty {
-          <mat-option [value]="">Sem dados</mat-option>
+        <mat-option [value]="">Sem dados</mat-option>
         }
       </mat-select>
     </mat-form-field>
 
     <mat-form-field *ngIf="classList.length > 0">
       <mat-label>Informe a Matéria:</mat-label>
-      <mat-select (valueChange)="changeClass($event)" formControlName="class_id">
+      <mat-select
+        (valueChange)="changeClass($event)"
+        formControlName="class_id"
+      >
         @for (class of classList; track class) {
-          <mat-option [value]="class._id">{{class.name}}</mat-option>
+        <mat-option [value]="class._id">{{ class.name }}</mat-option>
         } @empty {
-          <mat-option [value]="">Sem dados</mat-option>
+        <mat-option [value]="">Sem dados</mat-option>
         }
       </mat-select>
     </mat-form-field>
-    <button *ngIf="selectionClass.selected.length > 0 && selectionCourse.selected.length > 0" type="submit" mat-raised-button class="demo-button">
+    <button
+      *ngIf="
+        selectionClass.selected.length > 0 &&
+        selectionCourse.selected.length > 0
+      "
+      type="submit"
+      mat-raised-button
+      class="demo-button"
+    >
       BUSCAR
     </button>
   </form>
 </div>
 
-<div style="margin-top: 3%;" *ngIf="dataSource.data.length > 0" class="mat-elevation-z4">
+<div
+  style="margin-top: 3%"
+  *ngIf="dataSource.data.length > 0"
+  class="mat-elevation-z4"
+>
   <mat-form-field>
     <mat-label>Filtro por palavras chaves</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex: SOPA2" #input>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex: SOPA2"
+      #input
+    />
   </mat-form-field>
   <table mat-table [dataSource]="dataSource" matSort>
-
     <ng-container matColumnDef="remove">
       <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? toggleAllRowsReject() : null"
-            [checked]="selectionReject.hasValue() && isAllRejectSelected()"
-            [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
-            >
-            Selecionar Excluir
-          </mat-checkbox>
-        </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox (click)="$event.stopPropagation()"
+        <mat-checkbox
+          (change)="$event ? toggleAllRowsReject() : null"
+          [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+          [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
+        >
+          Selecionar Excluir
+        </mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox
+          (click)="$event.stopPropagation()"
           (change)="$event ? selectionReject.toggle(row) : null"
           [checked]="selectionReject.isSelected(row)"
-          ></mat-checkbox>
-        </td>
-      </ng-container>
-    
+        ></mat-checkbox>
+      </td>
+    </ng-container>
+
     <!-- Checkbox Column -->
     <ng-container matColumnDef="numero">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Número da Sala</th>
-      <td mat-cell *matCellDef="let row"> {{ row.room.number }} </td>
+      <td mat-cell *matCellDef="let row">{{ row.room.number }}</td>
     </ng-container>
     <ng-container matColumnDef="professor">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome do Professor</th>
-      <td mat-cell *matCellDef="let row"> {{ row.teacher.name }} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Nome do Professor
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.teacher.name }}</td>
     </ng-container>
     <ng-container matColumnDef="start_time">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Início da Reserva</th>
-      <td mat-cell *matCellDef="let row"> {{ row.start_time | date:'dd/MM/yyyy HH:mm' }} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Início da Reserva
+      </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.start_time | date : "dd/MM/yyyy HH:mm" }}
+      </td>
     </ng-container>
     <ng-container matColumnDef="end_time">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Fim da Reserva</th>
-      <td mat-cell *matCellDef="let row"> {{ row.end_time | date:'dd/MM/yyyy HH:mm' }} </td>
+      <td mat-cell *matCellDef="let row">
+        {{ row.end_time | date : "dd/MM/yyyy HH:mm" }}
+      </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
@@ -106,14 +134,14 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-</div> 
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    aria-label="Select page of users"
+  ></mat-paginator>
+</div>
 
 <div *ngIf="selectionReject.selected.length > 0" class="demo-button-container">
-  <button
-      mat-raised-button
-      (click)="removeData()"
-      class="demo-button">
+  <button mat-raised-button (click)="removeData()" class="demo-button">
     DELETAR RESERVAS
   </button>
 </div>
