--- a/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
+++ b/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
@@ -1,10 +1,8 @@
 <mat-toolbar>
-  <!-- Botão para voltar para a página anterior -->
   <button mat-icon-button (click)="goBack()">
     <mat-icon>home</mat-icon>
   </button>
 
-  <!-- Botão do menu existente -->
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
@@ -15,108 +13,137 @@
     </button>
   </mat-menu>
 
-  <!-- Título -->
   <span class="tituloH">HEIMDALL</span>
 
-  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
   <span class="spacer"></span>
 
-  <!-- Botão de logout -->
   <button mat-icon-button (click)="logout()">
     <mat-icon>logout</mat-icon>
   </button>
+  <img src="assets/images/ifsp.logo.png" class="logo" />
 </mat-toolbar>
 
-  <div class="table-container">
-    <mat-form-field>
-      <mat-label>Filtro por palavras chaves</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex: SP000000" #input>
-    </mat-form-field>
+<div class="table-container">
+  <mat-form-field>
+    <mat-label>Filtro por palavras chaves</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex: SP000000"
+      #input
+    />
+  </mat-form-field>
 
-    <div class="mat-elevation-z4">
-      <table mat-table [dataSource]="dataSource" matSort>
-        
-        <!-- Checkbox Column -->
-        <ng-container matColumnDef="remove">
-          <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox (change)="$event ? toggleAllRowsReject() : null"
-                [checked]="selectionReject.hasValue() && isAllRejectSelected()"
-                [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
-                >
-                Selecionar Excluir
-              </mat-checkbox>
-            </th>
-            <td mat-cell *matCellDef="let row">
-              <mat-checkbox (click)="$event.stopPropagation()"
-              (change)="$event ? selectionReject.toggle(row) : null"
-              [checked]="selectionReject.isSelected(row)"
-              ></mat-checkbox>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="edit">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Selecionar Editar</th>
-            <td class="select" mat-cell *matCellDef="let row">
-              <mat-checkbox (click)="$event.stopPropagation()"
-                (change)="$event ? selection.toggle(row) : null"
-                [checked]="selection.isSelected(row)"
-                [disabled]="selection.selected.length > 0 ? !selection.isSelected(row) : false"
-                ></mat-checkbox>
-            </td>
-          </ng-container>
-    
-        <ng-container matColumnDef="numero">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Número da Sala</th>
-          <td mat-cell *matCellDef="let row"> {{ row.number }} </td>
-        </ng-container>
-        <ng-container matColumnDef="cadeiras">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cadeiras</th>
-          <td mat-cell *matCellDef="let row"> {{ row.chairs }} </td>
-        </ng-container>
-        <ng-container matColumnDef="mesas">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Mesas</th>
-          <td mat-cell *matCellDef="let row"> {{ row.tables }} </td>
-        </ng-container>
-        <ng-container matColumnDef="cadeirasPorMesa">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cadeiras por mesas</th>
-          <td mat-cell *matCellDef="let row"> {{ row.chairByTables }} </td>
-        </ng-container>
-        <ng-container matColumnDef="computadores">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Computadores</th>
-          <td mat-cell *matCellDef="let row"> {{ row.computers }} </td>
-        </ng-container>
-        <ng-container matColumnDef="lousa">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Capacidade da sala</th>
-          <td mat-cell *matCellDef="let row"> {{ row.capacity }} </td>
-        </ng-container>
-        <ng-container matColumnDef="projetor">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Projetores</th>
-          <td mat-cell *matCellDef="let row"> {{ row.projectors }} </td>
-        </ng-container>
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Utilizavel?</th>
-          <td mat-cell *matCellDef="let row"> {{ row.status }} </td>
-        </ng-container>
-          
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">Não foram encontrados dados para: "{{input.value}}"</td>
-        </tr>
-      </table>
-    
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-    </div> 
+  <div class="mat-elevation-z4">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="remove">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="$event ? toggleAllRowsReject() : null"
+            [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+            [indeterminate]="
+              selectionReject.hasValue() && !isAllRejectSelected()
+            "
+          >
+            Selecionar Excluir
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selectionReject.toggle(row) : null"
+            [checked]="selectionReject.isSelected(row)"
+          ></mat-checkbox>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Selecionar Editar
+        </th>
+        <td class="select" mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+            [disabled]="
+              selection.selected.length > 0 ? !selection.isSelected(row) : false
+            "
+          ></mat-checkbox>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="numero">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Número da Sala
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.number }}</td>
+      </ng-container>
+      <ng-container matColumnDef="cadeiras">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Cadeiras</th>
+        <td mat-cell *matCellDef="let row">{{ row.chairs }}</td>
+      </ng-container>
+      <ng-container matColumnDef="mesas">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Mesas</th>
+        <td mat-cell *matCellDef="let row">{{ row.tables }}</td>
+      </ng-container>
+      <ng-container matColumnDef="cadeirasPorMesa">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Cadeiras por mesas
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.chairByTables }}</td>
+      </ng-container>
+      <ng-container matColumnDef="computadores">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Computadores</th>
+        <td mat-cell *matCellDef="let row">{{ row.computers }}</td>
+      </ng-container>
+      <ng-container matColumnDef="lousa">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Capacidade da sala
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.capacity }}</td>
+      </ng-container>
+      <ng-container matColumnDef="projetor">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Projetores</th>
+        <td mat-cell *matCellDef="let row">{{ row.projectors }}</td>
+      </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Utilizavel?</th>
+        <td mat-cell *matCellDef="let row">{{ row.status }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          Não foram encontrados dados para: "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
   </div>
+</div>
 
-  
-
-   <div class="demo-button-container">
-      <button mat-raised-button [disabled]="selection.selected.length == 0" (click)="editSala()" class="demo-button">
-        EDITAR SALA
-      </button>
-      <button mat-raised-button [disabled]="selectionReject.selected.length < 1" (click)="apagarSalas()" class="demo-button">
-        EXCLUIR SALA
-      </button>
-  </div>
+<div class="demo-button-container">
+  <button
+    mat-raised-button
+    [disabled]="selection.selected.length == 0"
+    (click)="editSala()"
+    class="demo-button"
+  >
+    EDITAR SALA
+  </button>
+  <button
+    mat-raised-button
+    [disabled]="selectionReject.selected.length < 1"
+    (click)="apagarSalas()"
+    class="demo-button"
+  >
+    EXCLUIR SALA
+  </button>
+</div>
