--- a/src/app/role-adm/tela-edit-teacher/tela-edit-teacher.component.html
+++ b/src/app/role-adm/tela-edit-teacher/tela-edit-teacher.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Edite o professor</h1>
   <div class="dadosPessoais">
     <form [formGroup]="resgiterForm" (ngSubmit)="register()">
       <mat-form-field class="nome" appearance="fill">
