--- a/src/app/role-adm/tela-edit-course/tela-edit-course.component.html
+++ b/src/app/role-adm/tela-edit-course/tela-edit-course.component.html
@@ -1,4 +1,5 @@
 <div class="container" *ngIf="validate">
+  <h1>Edite o curso</h1>
   <div class="dadosPessoais">
     <form [formGroup]="form" (ngSubmit)="save()">
       <mat-form-field class="nome" appearance="fill">
