--- a/src/app/role-adm/tela-edit-adm/tela-edit-adm.component.html
+++ b/src/app/role-adm/tela-edit-adm/tela-edit-adm.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  Edite o ADM
+  <h1>Edite o ADM</h1>
+  <br />
   <div class="dadosPessoais">
     <form [formGroup]="resgiterForm" (ngSubmit)="register()">
       <mat-form-field class="nome" appearance="fill">
