--- a/src/app/role-adm/tela-edit-course/tela-edit-course.component.html
+++ b/src/app/role-adm/tela-edit-course/tela-edit-course.component.html
@@ -1,3 +1,5 @@
+<h1>Edite o curso</h1>
+<br />
 <div class="container" *ngIf="validate">
   <div class="dadosPessoais">
     <form [formGroup]="form" (ngSubmit)="save()">
