--- a/src/app/role-adm/tela-edit-adm/tela-edit-adm.component.html
+++ b/src/app/role-adm/tela-edit-adm/tela-edit-adm.component.html
@@ -1,3 +1,5 @@
+<h1>Edite o ADM</h1>
+<br />
 <div class="container">
   <div class="dadosPessoais">
     <form [formGroup]="resgiterForm" (ngSubmit)="register()">
