--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -44,6 +44,10 @@ mat-card {
     border-top-right-radius: 10px;
   }
   button {
+    background: black;
+    color: #1ddd04;
+  }
+  button:hover {
     background: #1ddd04;
     color: black;
   }
@@ -60,6 +64,10 @@ mat-card {
     }
   }
   button {
+    background: black;
+    color: #1ddd04;
+  }
+  button:hover {
     background: #1ddd04;
     color: black;
   }
