--- a/src/app/role-student/tela-home-student/tela-home-student.component.scss
+++ b/src/app/role-student/tela-home-student/tela-home-student.component.scss
@@ -45,6 +45,10 @@ mat-card {
     border-top-right-radius: 10px;
   }
   button {
+    background: black;
+    color: #1ddd04;
+  }
+  button:hover {
     background: #1ddd04;
     color: black;
   }
@@ -61,6 +65,10 @@ mat-card {
     }
   }
   button {
+    background: black;
+    color: #1ddd04;
+  }
+  button:hover {
     background: #1ddd04;
     color: black;
   }
